fix: ensure no word break on title page

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,6 +10,11 @@
   overflow: hidden;
 }
 
+.heroTitle {
+  font-size: clamp(2rem, 4.5vw, 5vw);
+  overflow-wrap: normal;
+}
+
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
